# stationeering_mips

./: Cargo.toml  README.md
example_scripts/: Gas Fuel Generator - Atmo.mips  Greenhouse control.mips  Solar tracking + weather.mips  Solar tracking.mips
examples/: Beacon.mips  Gas Fuel Generator - Control.mips
src/: main.rs
