[package]
name = "stationeering_mips"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/mips_executor"
repository = "https://github.com/celeo/mips_executor"
documentation = ""
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["stationeers"]
categories = []

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4.17"
nom = "7.1.3"
once_cell = "1.17.0"
pretty_env_logger = "0.4.0"
